0.15.1: make the Java frontend JDK-agnostic
The frontend used JDK-internal com.sun.tools.javac.* APIs, including
JCCompilationUnit.endPositions (removed in JDK 27), so scanning any Java
project crashed on JDK 27 with NoSuchFieldError.

Migrate to the public compiler API (com.sun.source.* + javax.lang.model.*)
and compile with --release 21 (no --add-exports), so the artifact carries no
build-JDK internals. Requires JDK 21+ at scan time.

Remove the internal --add-exports from all four sites: Formula/apg-java.rb,
build.rs (compile + baked runtime command), the installed-binary runtime
command in src/main.rs, and the harness run comment.

Verified: CallGraphBuilderTest passes on JDK 21/25/27; scripts/gate.sh --e2e
is green (294 e2e tests, including the three Java e2e tests).